# plush

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  COPYING  README  README.md  default.nix  flake.nix
archive/: README.md
cmake/: Config.cmake.in  FindMath.cmake  pl_conf.h.in  plush.pc.in
editor/: CMakeLists.txt  main.c  main.cpp  scenefmt.txt
examples/: +0~fifties_lgt2.pcx  -0lcon0.pcx  -3lcon0.pcx  CMakeLists.txt  black.pcx  brick.pcx  chrome1.pcx  chrome_grayr.pcx  chrome_steel1.pcx  citybbk.mtl  cncrt2.pcx  concrt1.pcx  concrt1b.pcx  concrt1c.pcx  concrt1d.pcx  droid_legmap.pcx  duckdemo.c  ears.pcx  earth.pcx  eggbug.3ds  eggbug.c  eggbug.pcx  ex.h  ex1.c  ex2.c  ex3.c  ex4.c  ex_dos.h  ex_sdl2.h  ex_sdl3.h  eye.pcx  fire.c  flurry.c  fly.c  fork.3ds  ground.pcx  logo.c  logo.pcx  masked.c  measure.pcx  (+45 more)
include/plush/: pl_conf.h  pl_defs.h  pl_types.h  plush.h
source/: CAM.C  LIGHT.C  MAT.C  OBJ.C  PF_PTEX.C  PF_SOLID.C  PF_TRANS.C  PL_CONF.H  READ_3DS.C  READ_COB.C  READ_JAW.C  READ_PCX.C  RENDER.C  SPLINE.C  TEXT.C  cam.c  clip.c  endian.c  fast_obj.h  light.c  make.c  mat.c  math.c  mdl.c  obj.c  pf_ptex.c  pf_solid.c  pf_tex.c  pf_trans.c  pl_conf.h  pl_defs.h  pl_types.h  plush.c  plush.h  putface.h  read_3ds.c  read_bmp.c  read_cob.c  read_jaw.c  read_lbm.c  (+12 more)
